Fixed textarea spacing and autofocus on textarea when edit button is clicked

--- a/frontend/src/components/Comments/UpdateCommentForm.css
+++ b/frontend/src/components/Comments/UpdateCommentForm.css
@@ -1,3 +1,7 @@
+#update-comment-ctn {
+    padding: 10px 0;
+}
+
 .edit-comment-input {
     width: 800px;
     height: 50px;
@@ -7,6 +11,8 @@
     background-color: transparent;
     color: white;
     transition: 0.5s;
+    padding: 0;
+    font-size: 12pt;
 }
 
 .edit-comment-input:focus {
